hphp/hack/test/typecheck/tconst/unassigned_tconst.php.exp
File "unassigned_tconst.php", line 4, characters 21-24:
Please assign a value (Typing[4055])
