hphp/hack/test/typecheck/tconst/unassigned_tconst.php
<?hh // strict

class C {
  public type const test;
}
